--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# Bundler
+Gemfile.lock
+
+# copied `.md` files used for conversion to `.rst` using `m2r`
+docs/*.md
