--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
+# -*- coding: utf-8 -*-
+# vim: ft=yaml
+---
+dist: bionic
 stages:
   - test
-  - commitlint
+  - lint
   - name: release
     if: branch = master AND type != pull_request
 
@@ -15,36 +19,46 @@ services:
 # the `platforms` defined in `kitchen.yml`
 env:
   matrix:
-    - INSTANCE: v2019-2-py3-debian-9
+    - INSTANCE: develop-py3-debian-9
+    # - INSTANCE: develop-py3-ubuntu-1804
+    - INSTANCE: develop-py3-opensuse-150
+
+    # - INSTANCE: v2019-2-py3-debian-9
     - INSTANCE: v2019-2-py3-ubuntu-1804
-    # - INSTANCE: v2019-2-py2-centos-7
-    - INSTANCE: v2019-2-py2-fedora-29
+    - INSTANCE: v2019-2-py3-opensuse-150
+
+    - INSTANCE: v2019-2-py2-centos-7
+    - INSTANCE: v2019-2-py2-fedora-30
 
     - INSTANCE: v2018-3-py2-debian-8
-    - INSTANCE: v2018-3-py2-ubuntu-1604
-    - INSTANCE: v2018-3-py2-bootstrap-centos-6
-    - INSTANCE: v2018-3-py2-forced-version-fedora-28
-    # - INSTANCE: v2018-3-py2-opensuse-423
+    # - INSTANCE: v2018-3-py2-ubuntu-1604
+    # - INSTANCE: v2018-3-py2-centos-7
+    - INSTANCE: v2018-3-py2-forced-version-fedora-29
 
-    - INSTANCE: v2017-7-py2-debian-8
+    # - INSTANCE: v2017-7-py2-debian-8
     - INSTANCE: v2017-7-py2-ubuntu-1604
     - INSTANCE: v2017-7-py2-bootstrap-centos-6
 
 script:
-  - bundle exec kitchen verify ${INSTANCE}
+  - bin/kitchen verify ${INSTANCE}
 
 jobs:
   include:
-    # Define the commitlint stage
-    - stage: commitlint
+    # Define the `lint` stage (runs `yamllint` and `commitlint`)
+    - stage: lint
       language: node_js
       node_js: lts/*
       before_install: skip
       script:
+        # Install and run `yamllint`
+        # Need at least `v1.17.0` for the `yaml-files` setting
+        - pip install --user yamllint>=1.17.0
+        - yamllint -s .
+        # Install and run `commitlint`
         - npm install @commitlint/config-conventional -D
         - npm install @commitlint/travis-cli -D
         - commitlint-travis
-    # Define the release stage that runs semantic-release
+    # Define the release stage that runs `semantic-release`
     - stage: release
       language: node_js
       node_js: lts/*
