--- a/salt/osmap.yaml
+++ b/salt/osmap.yaml
@@ -1,19 +1,20 @@
 # -*- coding: utf-8 -*-
 # vim: ft=yaml
+---
 
-{% import_yaml "salt/ospyvermap.yaml" as ospyvermap %}
-{% set ospyver = salt['grains.filter_by'](ospyvermap, grain='os_family') or {} %}
-{% set py_ver_dir = salt['pillar.filter_by'](ospyver, pillar='salt:py_ver', default='py2') %}
-
-{% set osrelease = salt['grains.get']('osrelease') %}
-{% set salt_release = salt['pillar.get']('salt:release', 'latest') %}
-{% if salt_release.split('.')|length >= 3 %}
-{% set salt_release = 'archive/' ~ salt_release %}
-{% endif %}
-{% set os_lower =  salt['grains.get']('os')|lower %}
-{% set osmajorrelease = salt['grains.get']('osmajorrelease', osrelease)|string %}
-{% set oscodename = salt['grains.get']('oscodename') %}
-{% set os_family_lower =  salt['grains.get']('os_family')|lower %}
+# {% import_yaml "salt/ospyvermap.yaml" as ospyvermap %}
+# {% set ospyver = salt['grains.filter_by'](ospyvermap, grain='os_family') or {} %}
+# {% set py_ver_dir = salt['pillar.filter_by'](ospyver, pillar='salt:py_ver', default='py2') %}
+#
+# {% set osrelease = salt['grains.get']('osrelease') %}
+# {% set salt_release = salt['pillar.get']('salt:release', 'latest') %}
+# {% if salt_release.split('.')|length >= 3 %}
+# {% set salt_release = 'archive/' ~ salt_release %}
+# {% endif %}
+# {% set os_lower =  salt['grains.get']('os')|lower %}
+# {% set osmajorrelease = salt['grains.get']('osmajorrelease', osrelease)|string %}
+# {% set oscodename = salt['grains.get']('oscodename') %}
+# {% set os_family_lower =  salt['grains.get']('os_family')|lower %}
 
 Fedora:
   pygit2: python2-pygit2
@@ -24,9 +25,9 @@ Ubuntu:
   pygit2: python-pygit2
   gitfs:
     pygit2:
-      install_from_source: False
+      install_from_source: false
       git:
-        require_state: False
+        require_state: false
         install_from_package: Null
 
 Raspbian:
@@ -46,7 +47,7 @@ SmartOS:
   python_dulwich: 'py27-dulwich'
   gitfs:
     dulwich:
-      install_from_source: False
+      install_from_source: false
   config_path: /opt/local/etc/salt
   master:
     gitfs_provider: dulwich
