--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,10 @@ jobs:
       name: 'Lint: salt-lint, yamllint, rubocop & commitlint'
       before_install: skip
       script:
-        # Install and run `salt-lint`
-        - pip install --user salt-lint
+        # Install and run `salt-lint` (release candidate `v0.1.0`)
+        - pip install --user https://github.com/warpnet/salt-lint/archive/v0.1.0.zip
         - git ls-files | grep '\.sls$\|\.jinja$\|\.j2$\|\.tmpl$\|\.tst$'
-                       | xargs -I {} salt-lint {}
+                       | xargs salt-lint
         # Install and run `yamllint`
         # Need at least `v1.17.0` for the `yaml-files` setting
         - pip install --user yamllint>=1.17.0
@@ -46,36 +46,6 @@ jobs:
         - npm i -D @commitlint/config-conventional
                    @commitlint/travis-cli
         - commitlint-travis
-
-    ## Define the rest of the matrix based on Kitchen testing
-    # Make sure the instances listed below match up with
-    # the `platforms` defined in `kitchen.yml`
-    # The ordering used below has been selected based on the time required in Travis
-    # The slower ones are kept as high up as possible, to run concurrently rather than
-    # slow down the entire run at the end (i.e. `centos-6` and `opensuse`)
-    # However, the groupings needed to be maintained in some semblance of order
-    # so this is a best-effort matrix, in the circumstances
-    # - env: INSTANCE=v201707-py2-debian-8-2017-7-py2
-    - env: INSTANCE=v201707-py2-ubuntu-1604-2017-7-py2
-    - env: INSTANCE=v201707-py2-centos-6-2017-7-py2
-    # - env: INSTANCE=v201707-py2-amazonlinux-2-2017-7-py2
-    # - env: INSTANCE=v201707-py2-arch-base-latest-2017-7-py2
-    # - env: INSTANCE=v201803-py2-debian-9-2018-3-py2
-    # - env: INSTANCE=v201803-py2-ubuntu-1604-2018-3-py2
-    - env: INSTANCE=v201803-py2-centos-7-2018-3-py2
-    - env: INSTANCE=v201803-py2-amazonlinux-2-2018-3-py2
-    # - env: INSTANCE=v201803-py2-arch-base-latest-2018-3-py2
-    - env: INSTANCE=v201902-py2-debian-9-2019-2-py2
-    - env: INSTANCE=v201902-py2-ubuntu-1804-2019-2-py2
-    # - env: INSTANCE=v201902-py2-centos-7-2019-2-py2
-    # - env: INSTANCE=v201902-py2-opensuse-leap-151-2019-2-py2
-    # - env: INSTANCE=v201902-py2-amazonlinux-2-2019-2-py2
-    # - env: INSTANCE=v201902-py2-arch-base-latest-2019-2-py2
-    # - env: INSTANCE=v201902-py3-debian-10-2019-2-py3
-    # - env: INSTANCE=v201902-py3-ubuntu-1804-2019-2-py3
-    # - env: INSTANCE=v201902-py3-centos-8-2019-2-py3
-    - env: INSTANCE=v201902-py3-fedora-31-2019-2-py3
-    - env: INSTANCE=v201902-py3-opensuse-leap-151-2019-2-py3
 
     ## Define the release stage that runs `semantic-release`
     - stage: release
