--- a/kitchen.yml
+++ b/kitchen.yml
@@ -11,26 +11,6 @@ driver:
 # Make sure the platforms listed below match up with
 # the `env.matrix` instances defined in `.travis.yml`
 platforms:
-  ## SALT `2017.7`
-  - name: debian-8-2017-7-py2
-    driver:
-      image: netmanagers/salt-2017.7-py2:debian-8
-  - name: ubuntu-1604-2017-7-py2
-    driver:
-      image: netmanagers/salt-2017.7-py2:ubuntu-16.04
-  - name: centos-6-2017-7-py2
-    driver:
-      image: netmanagers/salt-2017.7-py2:centos-6
-      run_command: /sbin/init
-  - name: amazonlinux-1-2017-7-py2
-    driver:
-      image: netmanagers/salt-2017.7-py2:amazonlinux-1
-      run_command: /sbin/init
-  - name: arch-base-latest-2017-7-py2
-    driver:
-      image: netmanagers/salt-2017.7-py2:arch-base-latest
-      run_command: /usr/lib/systemd/systemd
-
   ## SALT `2018.3`
   - name: debian-9-2018-3-py2
     driver:
@@ -88,6 +68,31 @@ platforms:
     transport:
       max_ssh_sessions: 1
 
+  ## SALT `3000`
+  - name: debian-10-3000-py3
+    driver:
+      image: netmanagers/salt-3000-py3:debian-10
+  - name: ubuntu-1804-3000-py3
+    driver:
+      image: netmanagers/salt-3000-py3:ubuntu-18.04
+  - name: centos-8-3000-py3
+    driver:
+      image: netmanagers/salt-3000-py3:centos-8
+  - name: fedora-31-3000-py3
+    driver:
+      image: netmanagers/salt-3000-py3:fedora-31
+  - name: opensuse-leap-151-3000-py3
+    driver:
+      image: netmanagers/salt-3000-py3:opensuse-leap-15.1
+      run_command: /usr/lib/systemd/systemd
+    # Workaround to avoid intermittent failures on `opensuse-leap-15.1`:
+    # => SCP did not finish successfully (255):  (Net::SCP::Error)
+    transport:
+      max_ssh_sessions: 1
+  - name: amazonlinux-2-3000-py3
+    driver:
+      image: netmanagers/salt-3000-py3:amazonlinux-2
+
 provisioner:
   name: salt_solo
   log_level: debug
@@ -107,6 +112,57 @@ verifier:
     - cli
 
 suites:
+  - name: v3000-py3
+    includes:
+      - debian-10-3000-py3
+      - ubuntu-1804-3000-py3
+      - centos-8-3000-py3
+      - fedora-31-3000-py3
+      - opensuse-leap-151-3000-py3
+      - amazonlinux-2-3000-py3
+    provisioner:
+      state_top:
+        base:
+          '*':
+            - salt.pkgrepo
+            - salt.master
+            - salt.minion
+      pillars:
+        top.sls:
+          base:
+            '*':
+              - salt
+              - v3000-py3
+      pillars_from_files:
+        salt.sls: test/salt/pillar/salt.sls
+        v3000-py3.sls: test/salt/pillar/v3000-py3.sls
+    verifier:
+      inspec_tests:
+        - path: test/integration/v3000-py3
+  - name: v3000-py2
+    includes:
+      - ubuntu-1804-3000-py2
+      - centos-7-3000-py2
+      - arch-base-latest-3000-py2
+    provisioner:
+      state_top:
+        base:
+          '*':
+            - salt.pkgrepo
+            - salt.master
+            - salt.minion
+      pillars:
+        top.sls:
+          base:
+            '*':
+              - salt
+              - v3000-py2
+      pillars_from_files:
+        salt.sls: test/salt/pillar/salt.sls
+        v3000-py2.sls: test/salt/pillar/v3000-py2.sls
+    verifier:
+      inspec_tests:
+        - path: test/integration/v3000-py2
   - name: v201902-py3
     includes:
       - debian-10-2019-2-py3
@@ -184,29 +240,3 @@ suites:
     verifier:
       inspec_tests:
         - path: test/integration/v201803-py2
-  - name: v201707-py2
-    includes:
-      - debian-8-2017-7-py2
-      - ubuntu-1604-2017-7-py2
-      - centos-6-2017-7-py2
-      - amazonlinux-1-2017-7-py2
-      - arch-base-latest-2017-7-py2
-    provisioner:
-      state_top:
-        base:
-          '*':
-            - salt.pkgrepo
-            - salt.master
-            - salt.minion
-      pillars:
-        top.sls:
-          base:
-            '*':
-              - salt
-              - v201707-py2
-      pillars_from_files:
-        salt.sls: test/salt/pillar/salt.sls
-        v201707-py2.sls: test/salt/pillar/v201707-py2.sls
-    verifier:
-      inspec_tests:
-        - path: test/integration/v201707-py2
