--- a/.travis.yml
+++ b/.travis.yml
@@ -62,23 +62,23 @@ jobs:
     - env: INSTANCE=v3000-py3-ubuntu-1804-3000-1-py3
     - env: INSTANCE=v3000-py3-centos-8-3000-1-py3
     - env: INSTANCE=v3000-py3-fedora-31-3000-1-py3
-    # - env: INSTANCE=v3000-py3-opensuse-leap-151-3000-1-py3
+    - env: INSTANCE=v3000-py3-opensuse-leap-151-3000-1-py3
     - env: INSTANCE=v3000-py3-amazonlinux-2-3000-1-py3
-    # - env: INSTANCE=v3000-py2-arch-base-latest-3000-1-py2
-    # - env: INSTANCE=v201902-py3-debian-10-2019-2-py3
+    - env: INSTANCE=v3000-py2-arch-base-latest-3000-1-py2
+    - env: INSTANCE=v201902-py3-debian-10-2019-2-py3
     - env: INSTANCE=v201902-py3-debian-9-2019-2-py3
-    # - env: INSTANCE=v201902-py3-ubuntu-1804-2019-2-py3
-    # - env: INSTANCE=v201902-py3-centos-8-2019-2-py3
+    - env: INSTANCE=v201902-py3-ubuntu-1804-2019-2-py3
+    - env: INSTANCE=v201902-py3-centos-8-2019-2-py3
     - env: INSTANCE=v201902-py3-opensuse-leap-151-2019-2-py3
-    # - env: INSTANCE=v201902-py3-amazonlinux-2-2019-2-py3
+    - env: INSTANCE=v201902-py3-amazonlinux-2-2019-2-py3
     - env: INSTANCE=v201902-py2-ubuntu-1804-2019-2-py2
-    # - env: INSTANCE=v201902-py2-centos-7-2019-2-py2
-    # - env: INSTANCE=v201902-py2-arch-base-latest-2019-2-py2
-    # - env: INSTANCE=v201803-py2-debian-9-2018-3-py2
+    - env: INSTANCE=v201902-py2-centos-7-2019-2-py2
+    - env: INSTANCE=v201902-py2-arch-base-latest-2019-2-py2
+    - env: INSTANCE=v201803-py2-debian-9-2018-3-py2
     - env: INSTANCE=v201803-py2-ubuntu-1604-2018-3-py2
     - env: INSTANCE=v201803-py2-centos-7-2018-3-py2
-    # - env: INSTANCE=v201803-py2-amazonlinux-1-2018-3-py2
-    # - env: INSTANCE=v201803-py2-arch-base-latest-2018-3-py2
+    - env: INSTANCE=v201803-py2-amazonlinux-1-2018-3-py2
+    - env: INSTANCE=v201803-py2-arch-base-latest-2018-3-py2
 
     ## Define the release stage that runs `semantic-release`
     - stage: 'release'
