--- a/.travis.yml
+++ b/.travis.yml
@@ -28,57 +28,57 @@ jobs:
   include:
     ## Define the test stage that runs the linters (and testing matrix, if applicable)
 
-    # Run all of the linters in a single job
-    - language: 'node_js'
-      node_js: 'lts/*'
-      env: 'Lint'
-      name: 'Lint: salt-lint, yamllint, rubocop, shellcheck & commitlint'
-      before_install: 'skip'
-      script:
-        # Install and run `salt-lint`
-        - pip install --user salt-lint
-        - git ls-files -- '*.sls' '*.jinja' '*.j2' '*.tmpl' '*.tst'
-                        | xargs salt-lint
-        # Install and run `yamllint`
-        # Need at least `v1.17.0` for the `yaml-files` setting
-        - pip install --user yamllint>=1.17.0
-        - yamllint -s .
-        # Install and run `rubocop`
-        - gem install rubocop
-        - rubocop -d
-        # Run `shellcheck` (already pre-installed in Travis)
-        - shellcheck --version
-        - git ls-files -- '*.sh' '*.bash' '*.ksh'
-                        | xargs shellcheck
-        # Install and run `commitlint`
-        - npm i -D @commitlint/config-conventional
-                   @commitlint/travis-cli
-        - commitlint-travis
+    # # Run all of the linters in a single job
+    # - language: 'node_js'
+    #   node_js: 'lts/*'
+    #   env: 'Lint'
+    #   name: 'Lint: salt-lint, yamllint, rubocop, shellcheck & commitlint'
+    #   before_install: 'skip'
+    #   script:
+    #     # Install and run `salt-lint`
+    #     - pip install --user salt-lint
+    #     - git ls-files -- '*.sls' '*.jinja' '*.j2' '*.tmpl' '*.tst'
+    #                     | xargs salt-lint
+    #     # Install and run `yamllint`
+    #     # Need at least `v1.17.0` for the `yaml-files` setting
+    #     - pip install --user yamllint>=1.17.0
+    #     - yamllint -s .
+    #     # Install and run `rubocop`
+    #     - gem install rubocop
+    #     - rubocop -d
+    #     # Run `shellcheck` (already pre-installed in Travis)
+    #     - shellcheck --version
+    #     - git ls-files -- '*.sh' '*.bash' '*.ksh'
+    #                     | xargs shellcheck
+    #     # Install and run `commitlint`
+    #     - npm i -D @commitlint/config-conventional
+    #                @commitlint/travis-cli
+    #     - commitlint-travis
 
     ## Define the rest of the matrix based on Kitchen testing
     # Make sure the instances listed below match up with
     # the `platforms` defined in `kitchen.yml`
-    - env: INSTANCE=v3000-py3-debian-10-3000-2-py3
-    - env: INSTANCE=v3000-py3-debian-9-3000-2-py3
-    - env: INSTANCE=v3000-py3-ubuntu-1804-3000-2-py3
-    - env: INSTANCE=v3000-py3-centos-8-3000-2-py3
-    - env: INSTANCE=v3000-py3-centos-7-3000-2-py3
-    - env: INSTANCE=v3000-py3-fedora-31-3000-2-py3
-    # - env: INSTANCE=v3000-py3-opensuse-leap-151-3000-2-py3
-    - env: INSTANCE=v3000-py3-amazonlinux-2-3000-2-py3
+    # - env: INSTANCE=v3000-py3-debian-10-3000-2-py3
+    # - env: INSTANCE=v3000-py3-debian-9-3000-2-py3
+    # - env: INSTANCE=v3000-py3-ubuntu-1804-3000-2-py3
+    # - env: INSTANCE=v3000-py3-centos-8-3000-2-py3
+    # - env: INSTANCE=v3000-py3-centos-7-3000-2-py3
+    # - env: INSTANCE=v3000-py3-fedora-31-3000-2-py3
+    # # - env: INSTANCE=v3000-py3-opensuse-leap-151-3000-2-py3
+    # - env: INSTANCE=v3000-py3-amazonlinux-2-3000-2-py3
     - env: INSTANCE=v3000-py2-ubuntu-1804-3000-2-py2
     - env: INSTANCE=v3000-py2-ubuntu-1604-3000-2-py2
-    - env: INSTANCE=v201902-py3-debian-10-2019-2-py3
-    - env: INSTANCE=v201902-py3-debian-9-2019-2-py3
-    - env: INSTANCE=v201902-py3-ubuntu-1804-2019-2-py3
-    - env: INSTANCE=v201902-py3-ubuntu-1604-2019-2-py3
-    - env: INSTANCE=v201902-py3-centos-8-2019-2-py3
-    - env: INSTANCE=v201902-py3-centos-7-2019-2-py3
-    # - env: INSTANCE=v201902-py3-fedora-31-2019-2-py3
-    - env: INSTANCE=v201902-py3-opensuse-leap-151-2019-2-py3
-    - env: INSTANCE=v201902-py3-amazonlinux-2-2019-2-py3
-    - env: INSTANCE=v201902-py2-centos-6-2019-2-py2
-    - env: INSTANCE=v201902-py2-amazonlinux-1-2019-2-py2
+    # - env: INSTANCE=v201902-py3-debian-10-2019-2-py3
+    # - env: INSTANCE=v201902-py3-debian-9-2019-2-py3
+    # - env: INSTANCE=v201902-py3-ubuntu-1804-2019-2-py3
+    # - env: INSTANCE=v201902-py3-ubuntu-1604-2019-2-py3
+    # - env: INSTANCE=v201902-py3-centos-8-2019-2-py3
+    # - env: INSTANCE=v201902-py3-centos-7-2019-2-py3
+    # # - env: INSTANCE=v201902-py3-fedora-31-2019-2-py3
+    # - env: INSTANCE=v201902-py3-opensuse-leap-151-2019-2-py3
+    # - env: INSTANCE=v201902-py3-amazonlinux-2-2019-2-py3
+    # - env: INSTANCE=v201902-py2-centos-6-2019-2-py2
+    # # - env: INSTANCE=v201902-py2-amazonlinux-1-2019-2-py2
 
     ## Define the release stage that runs `semantic-release`
     - stage: 'release'
