--- a/.travis.yml
+++ b/.travis.yml
@@ -28,33 +28,6 @@ jobs:
   include:
     ## Define the test stage that runs the linters (and testing matrix, if applicable)
 
-    # Run all of the linters in a single job
-    - language: 'node_js'
-      node_js: 'lts/*'
-      env: 'Lint'
-      name: 'Lint: salt-lint, yamllint, rubocop, shellcheck & commitlint'
-      before_install: 'skip'
-      script:
-        # Install and run `salt-lint`
-        - pip install --user salt-lint
-        - git ls-files -- '*.sls' '*.jinja' '*.j2' '*.tmpl' '*.tst'
-                        | xargs salt-lint
-        # Install and run `yamllint`
-        # Need at least `v1.17.0` for the `yaml-files` setting
-        - pip install --user yamllint>=1.17.0
-        - yamllint -s .
-        # Install and run `rubocop`
-        - gem install rubocop
-        - rubocop -d
-        # Run `shellcheck` (already pre-installed in Travis)
-        - shellcheck --version
-        - git ls-files -- '*.sh' '*.bash' '*.ksh'
-                        | xargs shellcheck
-        # Install and run `commitlint`
-        - npm i -D @commitlint/config-conventional
-                   @commitlint/travis-cli
-        - commitlint-travis
-
     # Run `pre-commit` linters in a single job
     - language: 'python'
       env: 'Lint_pre-commit'
@@ -137,11 +110,13 @@ jobs:
 # Notification options: `always`, `never` or `change`
 notifications:
   webhooks:
-    if: 'repo = saltstack-formulas/salt-formula'
+    # yamllint disable rule:line-length
+    if: 'repo = saltstack-formulas/salt-formula OR repo = myii/salt-formula'
     urls:
-      - https://saltstack-formulas.zulipchat.com/api/v1/external/travis?api_key=HsIq3o5QmLxdnVCKF9is0FUIpkpAY79P&stream=CI&topic=saltstack-formulas%2Fsalt-formula&ignore_pull_requests=true
+      - https://saltstack-formulas.zulipchat.com/api/v1/external/travis?api_key=HsIq3o5QmLxdnVCKF9is0FUIpkpAY79P&stream=CI&topic=gemfile+lock%2F2020-W41a&ignore_pull_requests=true
+    # yamllint enable rule:line-length
     on_success: always  # default: always
     on_failure: always  # default: always
-    on_start: always    # default: never
+    on_start: never     # default: never
     on_cancel: always   # default: always
     on_error: always    # default: always
