--- a/kitchen.yml
+++ b/kitchen.yml
@@ -8,9 +8,78 @@ driver:
   privileged: true
   run_command: /lib/systemd/systemd
 
+# Using the commit title as a comment to guarantee change for new commit/push:
+# chore(gemfile+lock): update to latest gem versions (2020-W41a)
+
 # Make sure the platforms listed below match up with
 # the `env.matrix` instances defined in `.travis.yml`
 platforms:
+  ## SALT `tiamat`
+  - name: debian-10-tiamat-py3
+    driver:
+      image: saltimages/salt-tiamat-py3:debian-10
+  - name: debian-9-tiamat-py3
+    driver:
+      image: saltimages/salt-tiamat-py3:debian-9
+  - name: ubuntu-2004-tiamat-py3
+    driver:
+      image: saltimages/salt-tiamat-py3:ubuntu-20.04
+  - name: ubuntu-1804-tiamat-py3
+    driver:
+      image: saltimages/salt-tiamat-py3:ubuntu-18.04
+  - name: ubuntu-1604-tiamat-py3
+    driver:
+      image: saltimages/salt-tiamat-py3:ubuntu-16.04
+  - name: centos-8-tiamat-py3
+    driver:
+      image: saltimages/salt-tiamat-py3:centos-8
+  - name: centos-7-tiamat-py3
+    driver:
+      image: saltimages/salt-tiamat-py3:centos-7
+  - name: amazonlinux-2-tiamat-py3
+    driver:
+      image: saltimages/salt-tiamat-py3:amazonlinux-2
+  - name: oraclelinux-8-tiamat-py3
+    driver:
+      image: saltimages/salt-tiamat-py3:oraclelinux-8
+  - name: oraclelinux-7-tiamat-py3
+    driver:
+      image: saltimages/salt-tiamat-py3:oraclelinux-7
+
+  ## SALT `master`
+  - name: debian-10-master-py3
+    driver:
+      image: saltimages/salt-master-py3:debian-10
+  - name: ubuntu-2004-master-py3
+    driver:
+      image: saltimages/salt-master-py3:ubuntu-20.04
+  - name: ubuntu-1804-master-py3
+    driver:
+      image: saltimages/salt-master-py3:ubuntu-18.04
+  - name: centos-8-master-py3
+    driver:
+      image: saltimages/salt-master-py3:centos-8
+  - name: fedora-32-master-py3
+    driver:
+      image: saltimages/salt-master-py3:fedora-32
+  - name: fedora-31-master-py3
+    driver:
+      image: saltimages/salt-master-py3:fedora-31
+  - name: opensuse-leap-152-master-py3
+    driver:
+      image: saltimages/salt-master-py3:opensuse-leap-15.2
+      run_command: /usr/lib/systemd/systemd
+    # Workaround to avoid intermittent failures on `opensuse-leap-15.2`:
+    # => SCP did not finish successfully (255):  (Net::SCP::Error)
+    transport:
+      max_ssh_sessions: 1
+  - name: amazonlinux-2-master-py3
+    driver:
+      image: saltimages/salt-master-py3:amazonlinux-2
+  - name: oraclelinux-8-master-py3
+    driver:
+      image: saltimages/salt-master-py3:oraclelinux-8
+
   ## SALT `3001`
   - name: debian-10-3001-py3
     driver:
@@ -96,6 +165,10 @@ platforms:
   - name: ubuntu-1604-3000-3-py2
     driver:
       image: saltimages/salt-3000.3-py2:ubuntu-16.04
+  - name: arch-base-latest-3000-3-py2
+    driver:
+      image: saltimages/salt-3000.3-py2:arch-base-latest
+      run_command: /usr/lib/systemd/systemd
 
   ## SALT `2019.2`
   - name: debian-10-2019-2-py3
@@ -138,6 +211,10 @@ platforms:
     driver:
       image: saltimages/salt-2019.2-py2:amazonlinux-1
       run_command: /sbin/init
+  - name: arch-base-latest-2019-2-py2
+    driver:
+      image: saltimages/salt-2019.2-py2:arch-base-latest
+      run_command: /usr/lib/systemd/systemd
 
 provisioner:
   name: salt_solo
