--- a/kitchen.yml
+++ b/kitchen.yml
@@ -8,6 +8,9 @@ driver:
   privileged: true
   run_command: /lib/systemd/systemd
 
+# Using the commit title as a comment to guarantee change for new commit/push:
+# feat(gitlab-ci): use GitLab CI as Travis CI replacement (2020-W50_02)
+
 # Make sure the platforms listed below match up with
 # the `env.matrix` instances defined in `.travis.yml`
 platforms:
@@ -77,9 +80,6 @@ platforms:
   - name: centos-7-3000-3-py3
     driver:
       image: saltimages/salt-3000.3-py3:centos-7
-  - name: fedora-31-3000-3-py3
-    driver:
-      image: saltimages/salt-3000.3-py3:fedora-31
   - name: opensuse-leap-152-3000-3-py3
     driver:
       image: saltimages/salt-3000.3-py3:opensuse-leap-15.2
@@ -214,7 +214,6 @@ suites:
       - ubuntu-1804-3000-3-py3
       - centos-8-3000-3-py3
       - centos-7-3000-3-py3
-      - fedora-31-3000-3-py3
       - opensuse-leap-152-3000-3-py3
       - amazonlinux-2-3000-3-py3
       - oraclelinux-8-3000-3-py3
@@ -263,56 +262,3 @@ suites:
     verifier:
       inspec_tests:
         - path: test/integration/v3000-py2
-  - name: v201902-py3
-    includes:
-      - debian-10-2019-2-py3
-      - debian-9-2019-2-py3
-      - ubuntu-1804-2019-2-py3
-      - ubuntu-1604-2019-2-py3
-      - centos-8-2019-2-py3
-      - centos-7-2019-2-py3
-      - fedora-31-2019-2-py3
-      - opensuse-leap-152-2019-2-py3
-      - amazonlinux-2-2019-2-py3
-    provisioner:
-      state_top:
-        base:
-          '*':
-            - salt.pkgrepo
-            - salt.master
-            - salt.minion
-      pillars:
-        top.sls:
-          base:
-            '*':
-              - salt
-              - v201902-py3
-      pillars_from_files:
-        salt.sls: test/salt/pillar/salt.sls
-        v201902-py3.sls: test/salt/pillar/v201902-py3.sls
-    verifier:
-      inspec_tests:
-        - path: test/integration/v201902-py3
-  - name: v201902-py2
-    includes:
-      - centos-6-2019-2-py2
-      - amazonlinux-1-2019-2-py2
-    provisioner:
-      state_top:
-        base:
-          '*':
-            - salt.pkgrepo
-            - salt.master
-            - salt.minion
-      pillars:
-        top.sls:
-          base:
-            '*':
-              - salt
-              - v201902-py2
-      pillars_from_files:
-        salt.sls: test/salt/pillar/salt.sls
-        v201902-py2.sls: test/salt/pillar/v201902-py2.sls
-    verifier:
-      inspec_tests:
-        - path: test/integration/v201902-py2
