--- a/kitchen.vagrant.yml
+++ b/kitchen.vagrant.yml
@@ -11,14 +11,23 @@ platforms:
       gui: false
       linked_clone: true
     provisioner:
-      init_environment: >
-        salt-call --local state.single file.managed
-        C:\Users\vagrant\AppData\Local\Temp\kitchen\srv\salt\win\repo-ng\salt-minion-py3.sls
-        source=https://github.com/saltstack/salt-winrepo-ng/raw/master/salt-minion-py3.sls
-        skip_verify=True makedirs=True
+      # yamllint disable rule:line-length
+      init_environment: |
+        # Workaround to allow `kitchen converge` to be used multiple times
+        # without having to `kitchen destroy` first: remove state files copied
+        # across during the previous `converge` (if present)
+        rm -recurse `
+          C:\Users\vagrant\AppData\Local\Temp\kitchen\var\cache\salt\minion\files\base `
+          -ErrorAction SilentlyContinue
+        salt-call --local state.single file.managed `
+          C:\Users\vagrant\AppData\Local\Temp\kitchen\srv\salt\win\repo-ng\salt-minion-py3.sls `
+          source=https://github.com/saltstack/salt-winrepo-ng/raw/master/salt-minion-py3.sls `
+          skip_verify=True makedirs=True
+        exit 0
+      # yamllint enable rule:line-length
 
 suites:
-  - name: v3000-py3
+  - name: v3002-py3
     provisioner:
       state_top:
         base:
@@ -30,10 +39,10 @@ suites:
           base:
             '*':
               - salt
-              - v3000-py3
+              - v3002-py3
       pillars_from_files:
         salt.sls: test/salt/pillar/salt.sls
-        v3000-py3.sls: test/salt/pillar/v3000-py3.sls
+        v3002-py3.sls: test/salt/pillar/v3002-py3.sls
     verifier:
       inspec_tests:
-        - path: test/integration/v3000-py3
+        - path: test/integration/v3002-py3
