ci(kitchen): ensure `pkgrepo` & `master` states don't run on Windows

--- a/kitchen.github.yml
+++ b/kitchen.github.yml
@@ -28,6 +28,8 @@ suites:
         base:
           '*':
             - salt._mapdata
+            - salt.pkgrepo
+            - salt.master
             - salt.minion
       pillars:
         top.sls:
