--- a/kitchen.vagrant.yml
+++ b/kitchen.vagrant.yml
@@ -33,6 +33,8 @@ suites:
         base:
           '*':
             - salt._mapdata
+            - salt.pkgrepo
+            - salt.master
             - salt.minion
       pillars:
         top.sls:
