--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,30 +48,30 @@ variables:
 ###############################################################################
 # `lint` stage: `commitlint` & `pre-commit`
 ###############################################################################
-commitlint:
-  stage: *stage_lint
-  image: *image_commitlint
-  script:
-    # Add `upstream` remote to get access to `upstream/master`
-    - 'git remote add upstream
-       https://gitlab.com/saltstack-formulas/salt-formula.git'
-    - 'git fetch --all'
-    # Set default commit hashes for `--from` and `--to`
-    - 'export COMMITLINT_FROM="$(git merge-base upstream/master HEAD)"'
-    - 'export COMMITLINT_TO="${CI_COMMIT_SHA}"'
-    # `coqbot` adds a merge commit to test PRs on top of the latest commit in
-    # the repo; amend this merge commit message to avoid failure
-    - |
-      if [ "${GITLAB_USER_LOGIN}" = "coqbot" ] \
-      && [ "${CI_COMMIT_BRANCH}" != "master" ]; then
-        git commit --amend -m \
-          'chore: reword coqbot merge commit message for commitlint'
-        export COMMITLINT_TO=HEAD
-      fi
-    # Run `commitlint`
-    - 'commitlint --from "${COMMITLINT_FROM}"
-                  --to   "${COMMITLINT_TO}"
-                  --verbose'
+# commitlint:
+#   stage: *stage_lint
+#   image: *image_commitlint
+#   script:
+#     # Add `upstream` remote to get access to `upstream/master`
+#     - 'git remote add upstream
+#        https://gitlab.com/saltstack-formulas/salt-formula.git'
+#     - 'git fetch --all'
+#     # Set default commit hashes for `--from` and `--to`
+#     - 'export COMMITLINT_FROM="$(git merge-base upstream/master HEAD)"'
+#     - 'export COMMITLINT_TO="${CI_COMMIT_SHA}"'
+#     # `coqbot` adds a merge commit to test PRs on top of the latest commit in
+#     # the repo; amend this merge commit message to avoid failure
+#     - |
+#       if [ "${GITLAB_USER_LOGIN}" = "coqbot" ] \
+#       && [ "${CI_COMMIT_BRANCH}" != "master" ]; then
+#         git commit --amend -m \
+#           'chore: reword coqbot merge commit message for commitlint'
+#         export COMMITLINT_TO=HEAD
+#       fi
+#     # Run `commitlint`
+#     - 'commitlint --from "${COMMITLINT_FROM}"
+#                   --to   "${COMMITLINT_TO}"
+#                   --verbose'
 
 pre-commit:
   stage: *stage_lint
@@ -123,52 +123,6 @@ rubocop:
 ## Define the rest of the matrix based on Kitchen testing
 # Make sure the instances listed below match up with
 # the `platforms` defined in `kitchen.yml`
-v3002-py3-debian-10-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-debian-9-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-ubuntu-2004-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-ubuntu-1804-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-ubuntu-1604-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-centos-8-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-centos-7-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-fedora-33-3002-2-py3: {extends: '.test_instance'}
-# v3002-py3-fedora-32-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-opensuse-leap-152-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-opensuse-tmbl-latest-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-amazonlinux-2-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-oraclelinux-8-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-oraclelinux-7-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-gentoo-stage3-latest-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-gentoo-stage3-systemd-3002-2-py3: {extends: '.test_instance'}
-v3001-py3-debian-10-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-debian-9-3001-4-py3: {extends: '.test_instance'}
-v3001-py3-ubuntu-2004-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-ubuntu-1804-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-ubuntu-1604-3001-4-py3: {extends: '.test_instance'}
-v3001-py3-centos-8-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-centos-7-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-fedora-33-3001-4-py3: {extends: '.test_instance'}
-v3001-py3-fedora-32-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-opensuse-leap-152-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-opensuse-tmbl-latest-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-amazonlinux-2-3001-4-py3: {extends: '.test_instance'}
-v3001-py3-oraclelinux-8-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-oraclelinux-7-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-gentoo-stage3-latest-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-gentoo-stage3-systemd-3001-4-py3: {extends: '.test_instance'}
-# v3000-py3-debian-10-3000-6-py3: {extends: '.test_instance'}
-v3000-py3-debian-9-3000-6-py3: {extends: '.test_instance'}
-v3000-py3-ubuntu-1804-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-ubuntu-1604-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-centos-8-3000-6-py3: {extends: '.test_instance'}
-v3000-py3-centos-7-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-opensuse-leap-152-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-amazonlinux-2-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-oraclelinux-8-3000-6-py3: {extends: '.test_instance'}
-v3000-py3-oraclelinux-7-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-gentoo-stage3-latest-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-gentoo-stage3-systemd-3000-6-py3: {extends: '.test_instance'}
-# v3000-py2-ubuntu-1804-3000-6-py2: {extends: '.test_instance'}
-v3000-py2-ubuntu-1604-3000-6-py2: {extends: '.test_instance'}
 
 ###############################################################################
 # `release` stage: `semantic-release`
