--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,59 +45,59 @@ stages:
 variables:
   DOCKER_DRIVER: 'overlay2'
 
-###############################################################################
-# `lint` stage: `commitlint` & `pre-commit`
-###############################################################################
-commitlint:
-  stage: *stage_lint
-  image: *image_commitlint
-  script:
-    # Add `upstream` remote to get access to `upstream/master`
-    - 'git remote add upstream
-       https://gitlab.com/saltstack-formulas/salt-formula.git'
-    - 'git fetch --all'
-    # Set default commit hashes for `--from` and `--to`
-    - 'export COMMITLINT_FROM="$(git merge-base upstream/master HEAD)"'
-    - 'export COMMITLINT_TO="${CI_COMMIT_SHA}"'
-    # `coqbot` adds a merge commit to test PRs on top of the latest commit in
-    # the repo; amend this merge commit message to avoid failure
-    - |
-      if [ "${GITLAB_USER_LOGIN}" = "coqbot" ] \
-      && [ "${CI_COMMIT_BRANCH}" != "master" ]; then
-        git commit --amend -m \
-          'chore: reword coqbot merge commit message for commitlint'
-        export COMMITLINT_TO=HEAD
-      fi
-    # Run `commitlint`
-    - 'commitlint --from "${COMMITLINT_FROM}"
-                  --to   "${COMMITLINT_TO}"
-                  --verbose'
-
-pre-commit:
-  stage: *stage_lint
-  image: *image_precommit
-  # https://pre-commit.com/#gitlab-ci-example
-  variables:
-    PRE_COMMIT_HOME: '${CI_PROJECT_DIR}/.cache/pre-commit'
-  cache:
-    key: '${CI_JOB_NAME}'
-    paths:
-      - '${PRE_COMMIT_HOME}'
-  script:
-    - 'pre-commit run --all-files --color always --verbose'
-
-# Use a separate job for `rubocop` other than the one potentially run by `pre-commit`
-# - The `pre-commit` check will only be available for formulas that pass the default
-#   `rubocop` check -- and must continue to do so
-# - This job is allowed to fail, so can be used for all formulas
-# - Furthermore, this job uses all of the latest `rubocop` features & cops,
-#   which will help when upgrading the `rubocop` linter used in `pre-commit`
-rubocop:
-  allow_failure: true
-  stage: *stage_lint
-  image: *image_rubocop
-  script:
-    - 'rubocop -d -P -S --enable-pending-cops'
+# ###############################################################################
+# # `lint` stage: `commitlint` & `pre-commit`
+# ###############################################################################
+# commitlint:
+#   stage: *stage_lint
+#   image: *image_commitlint
+#   script:
+#     # Add `upstream` remote to get access to `upstream/master`
+#     - 'git remote add upstream
+#        https://gitlab.com/saltstack-formulas/salt-formula.git'
+#     - 'git fetch --all'
+#     # Set default commit hashes for `--from` and `--to`
+#     - 'export COMMITLINT_FROM="$(git merge-base upstream/master HEAD)"'
+#     - 'export COMMITLINT_TO="${CI_COMMIT_SHA}"'
+#     # `coqbot` adds a merge commit to test PRs on top of the latest commit in
+#     # the repo; amend this merge commit message to avoid failure
+#     - |
+#       if [ "${GITLAB_USER_LOGIN}" = "coqbot" ] \
+#       && [ "${CI_COMMIT_BRANCH}" != "master" ]; then
+#         git commit --amend -m \
+#           'chore: reword coqbot merge commit message for commitlint'
+#         export COMMITLINT_TO=HEAD
+#       fi
+#     # Run `commitlint`
+#     - 'commitlint --from "${COMMITLINT_FROM}"
+#                   --to   "${COMMITLINT_TO}"
+#                   --verbose'
+#
+# pre-commit:
+#   stage: *stage_lint
+#   image: *image_precommit
+#   # https://pre-commit.com/#gitlab-ci-example
+#   variables:
+#     PRE_COMMIT_HOME: '${CI_PROJECT_DIR}/.cache/pre-commit'
+#   cache:
+#     key: '${CI_JOB_NAME}'
+#     paths:
+#       - '${PRE_COMMIT_HOME}'
+#   script:
+#     - 'pre-commit run --all-files --color always --verbose'
+#
+# # Use a separate job for `rubocop` other than the one potentially run by `pre-commit`
+# # - The `pre-commit` check will only be available for formulas that pass the default
+# #   `rubocop` check -- and must continue to do so
+# # - This job is allowed to fail, so can be used for all formulas
+# # - Furthermore, this job uses all of the latest `rubocop` features & cops,
+# #   which will help when upgrading the `rubocop` linter used in `pre-commit`
+# rubocop:
+#   allow_failure: true
+#   stage: *stage_lint
+#   image: *image_rubocop
+#   script:
+#     - 'rubocop -d -P -S --enable-pending-cops'
 
 ###############################################################################
 # Define `test` template
@@ -131,44 +131,47 @@ v3002-py3-ubuntu-1604-3002-2-py3: {extends: '.test_instance'}
 v3002-py3-centos-8-3002-2-py3: {extends: '.test_instance'}
 v3002-py3-centos-7-3002-2-py3: {extends: '.test_instance'}
 v3002-py3-fedora-33-3002-2-py3: {extends: '.test_instance'}
-# v3002-py3-fedora-32-3002-2-py3: {extends: '.test_instance'}
+v3002-py3-fedora-32-3002-2-py3: {extends: '.test_instance'}
 v3002-py3-opensuse-leap-152-3002-2-py3: {extends: '.test_instance'}
 v3002-py3-opensuse-tmbl-latest-3002-2-py3: {extends: '.test_instance'}
 v3002-py3-amazonlinux-2-3002-2-py3: {extends: '.test_instance'}
 v3002-py3-oraclelinux-8-3002-2-py3: {extends: '.test_instance'}
 v3002-py3-oraclelinux-7-3002-2-py3: {extends: '.test_instance'}
+v3002-py3-arch-base-latest-3002-2-py3: {extends: '.test_instance'}
 v3002-py3-gentoo-stage3-latest-3002-2-py3: {extends: '.test_instance'}
 v3002-py3-gentoo-stage3-systemd-3002-2-py3: {extends: '.test_instance'}
 v3001-py3-debian-10-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-debian-9-3001-4-py3: {extends: '.test_instance'}
+v3001-py3-debian-9-3001-4-py3: {extends: '.test_instance'}
 v3001-py3-ubuntu-2004-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-ubuntu-1804-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-ubuntu-1604-3001-4-py3: {extends: '.test_instance'}
+v3001-py3-ubuntu-1804-3001-4-py3: {extends: '.test_instance'}
+v3001-py3-ubuntu-1604-3001-4-py3: {extends: '.test_instance'}
 v3001-py3-centos-8-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-centos-7-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-fedora-33-3001-4-py3: {extends: '.test_instance'}
+v3001-py3-centos-7-3001-4-py3: {extends: '.test_instance'}
+v3001-py3-fedora-33-3001-4-py3: {extends: '.test_instance'}
 v3001-py3-fedora-32-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-opensuse-leap-152-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-opensuse-tmbl-latest-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-amazonlinux-2-3001-4-py3: {extends: '.test_instance'}
+v3001-py3-opensuse-leap-152-3001-4-py3: {extends: '.test_instance'}
+v3001-py3-opensuse-tmbl-latest-3001-4-py3: {extends: '.test_instance'}
+v3001-py3-amazonlinux-2-3001-4-py3: {extends: '.test_instance'}
 v3001-py3-oraclelinux-8-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-oraclelinux-7-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-gentoo-stage3-latest-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-gentoo-stage3-systemd-3001-4-py3: {extends: '.test_instance'}
-# v3000-py3-debian-10-3000-6-py3: {extends: '.test_instance'}
+v3001-py3-oraclelinux-7-3001-4-py3: {extends: '.test_instance'}
+v3001-py3-arch-base-latest-3001-4-py3: {extends: '.test_instance'}
+v3001-py3-gentoo-stage3-latest-3001-4-py3: {extends: '.test_instance'}
+v3001-py3-gentoo-stage3-systemd-3001-4-py3: {extends: '.test_instance'}
+v3000-py3-debian-10-3000-6-py3: {extends: '.test_instance'}
 v3000-py3-debian-9-3000-6-py3: {extends: '.test_instance'}
 v3000-py3-ubuntu-1804-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-ubuntu-1604-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-centos-8-3000-6-py3: {extends: '.test_instance'}
+v3000-py3-ubuntu-1604-3000-6-py3: {extends: '.test_instance'}
+v3000-py3-centos-8-3000-6-py3: {extends: '.test_instance'}
 v3000-py3-centos-7-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-opensuse-leap-152-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-amazonlinux-2-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-oraclelinux-8-3000-6-py3: {extends: '.test_instance'}
+v3000-py3-opensuse-leap-152-3000-6-py3: {extends: '.test_instance'}
+v3000-py3-amazonlinux-2-3000-6-py3: {extends: '.test_instance'}
+v3000-py3-oraclelinux-8-3000-6-py3: {extends: '.test_instance'}
 v3000-py3-oraclelinux-7-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-gentoo-stage3-latest-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-gentoo-stage3-systemd-3000-6-py3: {extends: '.test_instance'}
-# v3000-py2-ubuntu-1804-3000-6-py2: {extends: '.test_instance'}
+v3000-py3-gentoo-stage3-latest-3000-6-py3: {extends: '.test_instance'}
+v3000-py3-gentoo-stage3-systemd-3000-6-py3: {extends: '.test_instance'}
+v3000-py2-ubuntu-1804-3000-6-py2: {extends: '.test_instance'}
 v3000-py2-ubuntu-1604-3000-6-py2: {extends: '.test_instance'}
+v3000-py2-arch-base-latest-3000-6-py2: {extends: '.test_instance'}
 
 ###############################################################################
 # `release` stage: `semantic-release`
